# search-module

./: .env  .gitmodules  README.md  pyproject.toml
src/search_module/: jina_client.py
src/search_module/db/: elastic.py  qdrant.py
src/search_module/flow/: calculate_histogram_train.py  combine_json.py  embed_corpus.py  evaluate_results.py  hybrid_search.py  upload_to_db.py
submodules/data-process-module/: README.md  pyproject.toml
submodules/data-process-module/example/: example.py
submodules/data-process-module/src/data_process_module/: corpus_transform.py  query_transform.py
