[project]
name = "data-process-module"
version = "0.1.0"
description = "Process data like a cool kid at work"
readme = "README.md"
authors = [
    { name = "dinhanhx", email = "dinhanhx@gmail.com" }
]
requires-python = ">=3.10"
dependencies = ["openai", "tiktoken", "python-dotenv"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
